crates/testing/tests/testscript/errors/string_escape_bare_backslash.error
parse error at line 4 column 4 for "\"---\"":
---
   ^